Added logging and rewrote startup/shutdown a little bit

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Source/Third_Party/spdlog"]
 	path = Source/Third_Party/spdlog
 	url = https://github.com/gabime/spdlog.git
+	ignore = dirty
